--- a/SteamGamesData.ipynb
+++ b/SteamGamesData.ipynb
@@ -960,7 +960,7 @@
     }
    ],
    "source": [
-    "# Step 1: Combine  'Windows', 'Mac', and 'Linux' columns into a single column called 'Operating System(s)'\n",
+    "# Combine  'Windows', 'Mac', and 'Linux' columns into a single column called 'Operating System(s)'\n",
     "def combine_os(row):\n",
     "    os_list = []\n",
     "    if row['Windows']:\n",
@@ -974,7 +974,7 @@
     "# Apply the function to create the new column\n",
     "games_cleaned['Operating System(s)'] = games_cleaned.apply(combine_os, axis=1)\n",
     "\n",
-    "# Step 2: Drop the original 'Windows', 'Mac', and 'Linux' columns\n",
+    "# Drop the original 'Windows', 'Mac', and 'Linux' columns\n",
     "games_cleaned.drop(columns=['Windows', 'Mac', 'Linux'], inplace=True)\n",
     "\n",
     "# Display the dataframe with the new comibined columns\n",
