--- a/SteamGamesData.ipynb
+++ b/SteamGamesData.ipynb
@@ -1,4 +1,4 @@
-{
+#{
  "cells": [
   {
    "cell_type": "code",
@@ -776,7 +776,7 @@
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n",
+    "# Rename the columns\n",
     "games_cleaned = games_cleaned.rename(columns={'Release date': 'Release Date', 'Estimated owners': 'Estimated Owners', 'DLC count': 'DLC Count',\n",
     "                                             'About the game': 'Game Description', 'Metacritic score': 'Metacritic Score'})\n",
     "\n",
