new jupyter push

--- a/SteamGamesData.ipynb
+++ b/SteamGamesData.ipynb
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f5541447",
+   "id": "c9c1dea6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3c33748c",
+   "id": "208b2b26",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n",
+    "# Rename the desired columns\n",
     "games_cleaned = games_cleaned.rename(columns={'Release date': 'Release Date', 'Estimated owners': 'Estimated Owners', 'DLC count': 'DLC Count',\n",
     "                                             'About the game': 'Game Description', 'Metacritic score': 'Metacritic Score'})\n",
     "\n",
@@ -960,7 +960,7 @@
     }
    ],
    "source": [
-    "# Step 1: Combine  'Windows', 'Mac', and 'Linux' columns into a single column called 'Operating System(s)'\n",
+    "# Combine  'Windows', 'Mac', and 'Linux' columns into a single column called 'Operating System(s)'\n",
     "def combine_os(row):\n",
     "    os_list = []\n",
     "    if row['Windows']:\n",
@@ -974,7 +974,7 @@
     "# Apply the function to create the new column\n",
     "games_cleaned['Operating System(s)'] = games_cleaned.apply(combine_os, axis=1)\n",
     "\n",
-    "# Step 2: Drop the original 'Windows', 'Mac', and 'Linux' columns\n",
+    "# Drop the original 'Windows', 'Mac', and 'Linux' columns\n",
     "games_cleaned.drop(columns=['Windows', 'Mac', 'Linux'], inplace=True)\n",
     "\n",
     "# Display the dataframe with the new comibined columns\n",
