--- a/jupyterNotebook/Untitled.ipynb
+++ b/jupyterNotebook/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "286e8d7a-d7ad-41f1-b999-df6137c8c594",
    "metadata": {},
    "outputs": [],
@@ -14,25 +14,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "8568c62b-e982-4ea4-a019-f5be46142dd8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "type object 'ZipFile' has no attribute 'ZipFile'",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '..\\\\resources\\\\rawData\\\\gamesSteamCompressed.zip'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m zipPath \u001b[38;5;241m=\u001b[39m Path(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../resources/rawData/gamesSteamCompressed.zip\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m zfCSV \u001b[38;5;241m=\u001b[39m \u001b[43mzipfile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZipFile\u001b[49m(zipPath)\n\u001b[0;32m      3\u001b[0m DF \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(zfCSV(zfCSV\u001b[38;5;241m.\u001b[39mopen(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgames.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)))\n\u001b[0;32m      4\u001b[0m DF\u001b[38;5;241m.\u001b[39mhead()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'ZipFile' has no attribute 'ZipFile'"
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m zipPath \u001b[38;5;241m=\u001b[39m Path(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../resources/rawData/gamesSteamCompressed.zip\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m zfCSV \u001b[38;5;241m=\u001b[39m \u001b[43mzipfile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mzipPath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m DF \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(zfCSV(zfCSV\u001b[38;5;241m.\u001b[39mopen(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgames.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)))\n\u001b[0;32m      4\u001b[0m DF\u001b[38;5;241m.\u001b[39mhead()\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\zipfile\\__init__.py:1331\u001b[0m, in \u001b[0;36mZipFile.__init__\u001b[1;34m(self, file, mode, compression, allowZip64, compresslevel, strict_timestamps, metadata_encoding)\u001b[0m\n\u001b[0;32m   1329\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m   1330\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 1331\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfp \u001b[38;5;241m=\u001b[39m \u001b[43mio\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfilemode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1332\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m:\n\u001b[0;32m   1333\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m filemode \u001b[38;5;129;01min\u001b[39;00m modeDict:\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '..\\\\resources\\\\rawData\\\\gamesSteamCompressed.zip'"
      ]
     }
    ],
    "source": [
     "zipPath = Path(\"../resources/rawData/gamesSteamCompressed.zip\")\n",
-    "zfCSV = zipfile.ZipFile(zipPath)\n",
+    "zfCSV = zipfile(zipPath)\n",
     "DF = pd.read_csv(zfCSV(zfCSV.open('games.csv')))\n",
     "DF.head()\n",
     "                 "
